<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="com.example.ongraph.socialapp.LoginActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:textColorHint="#424242"
        android:id="@+id/username"
        android:text="akash"
        android:textColor="#000"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:textColorHint="#424242"
        android:text="1234"
        android:textColor="#000"
        android:id="@+id/password"
        android:layout_marginTop="22dp"
        android:inputType="textPassword"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:id="@+id/login_button"
        android:background="@color/com_facebook_button_background_color"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#cccccc"
        android:text="@string/signup"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:layout_above="@+id/or"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#cccccc"
        android:text="@string/forget"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#cccccc"
        android:text="@string/or"
        android:layout_below="@+id/forget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:text="Continue with Google"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/common_google_signin_btn_text_dark_pressed"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/facebookButton"
        android:background="@drawable/facebook"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_in_button"
        android:layout_alignEnd="@+id/sign_in_button" />

    <TextView
        android:id="@+id/token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/jaimatadi"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>