<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ongraph.socialapp.Signup_Activity"
    android:background="@drawable/back2">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup2"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView1"
        android:layout_toStartOf="@+id/textView1" />

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignStart="@+id/username" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username:"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone: "
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="30dp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/phone" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/signup_password" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/phone"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/username"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password: "
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Confirm: "
        android:textSize="20sp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:text="E-mail: "
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Profile pic:"
        android:textSize="20sp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <ImageButton
        android:id="@+id/cam_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_camera"
        android:layout_alignBottom="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="15sp"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignEnd="@+id/textView1"
        android:layout_marginEnd="15dp"
        android:id="@+id/textView10" />

    <ImageButton
        android:id="@+id/gallery_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_gallery"
        android:layout_alignTop="@+id/cam_button"
        android:layout_toEndOf="@+id/textView10"
        android:layout_marginStart="15dp" />
    <Button
        android:id="@+id/signup_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/com_facebook_blue"
        android:text="@string/signup2"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/cam_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

</ScrollView>
